Bug 15780 - Increasing slowness of sharesec performance with high number of registry shares
Summary: Increasing slowness of sharesec performance with high number of registry shares
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.21.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-09 19:43 UTC by Guenther Deschner
Modified: 2025-02-17 15:52 UTC (History)
1 user (show)

See Also:


Attachments
patch from master for v4-21-test (9.89 KB, patch)
2025-01-10 10:55 UTC, Guenther Deschner
anoopcs: review+
Details
patch from master for v4-20-test (9.89 KB, patch)
2025-01-10 10:56 UTC, Guenther Deschner
anoopcs: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2025-01-09 19:43:04 UTC
sharesec always unconditionally loads all registry shares causing major performance drop when used with thousands of shares.

Have patches, need bug :)
Comment 1 Samba QA Contact 2025-01-10 10:46:04 UTC
This bug was referenced in samba master:

0a12254ea8b3414deebc3e6329025052c650356e
04531e1b1d25d114c470922547bee769b07e5e60
2927dba0434b960e4c381329bdc9fe474fb930ce
78eb293e1cdd3635de0bcf46ffb9d842f27bcc9f
1410803713440caf29a40aec30516489d1944665
Comment 2 Guenther Deschner 2025-01-10 10:55:34 UTC
Created attachment 18528 [details]
patch from master for v4-21-test
Comment 3 Guenther Deschner 2025-01-10 10:56:29 UTC
Created attachment 18529 [details]
patch from master for v4-20-test
Comment 4 Anoop C S 2025-01-10 12:47:20 UTC
Re-assigning to Jule for inclusion in 4.21 and 4.20.
Comment 5 Jule Anger 2025-01-17 12:56:36 UTC
Pushed to autobuild-v4-{21,20}-test.
Comment 6 Samba QA Contact 2025-01-21 08:43:04 UTC
This bug was referenced in samba v4-20-test:

6fb64f70203f8aaf57dcf8cf7800e3640c012346
839b32b1d14c8a45d58a75ef45d145d20744604a
91410773497916f0cfcb453faafa1fea59e09eb6
017f90a03d0ab69641880d4fc2504c02259fa04e
7123833ab494811c83a1e95e10a617daddcff89c
Comment 7 Samba QA Contact 2025-01-21 13:49:59 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.7):

6fb64f70203f8aaf57dcf8cf7800e3640c012346
839b32b1d14c8a45d58a75ef45d145d20744604a
91410773497916f0cfcb453faafa1fea59e09eb6
017f90a03d0ab69641880d4fc2504c02259fa04e
7123833ab494811c83a1e95e10a617daddcff89c
Comment 8 Samba QA Contact 2025-02-05 10:44:04 UTC
This bug was referenced in samba v4-21-test:

087972fded9d051e49f760e6e358ea4a2316c34e
a564f5dbad8930e55fcd5e68ade92f63147a07a3
2588668e44b2dcb6d59e0fd52cc968ea08d4d8a7
22b7b4bd728071916e24854e34d1b3a90f37ab95
1f24b3ff23f4997a1d9b6933a82019319d86c448
Comment 9 Jule Anger 2025-02-05 12:23:19 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2025-02-17 15:52:24 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.4):

087972fded9d051e49f760e6e358ea4a2316c34e
a564f5dbad8930e55fcd5e68ade92f63147a07a3
2588668e44b2dcb6d59e0fd52cc968ea08d4d8a7
22b7b4bd728071916e24854e34d1b3a90f37ab95
1f24b3ff23f4997a1d9b6933a82019319d86c448